--- a/多语言/en.lproj/Image_Localizable.strings
+++ b/多语言/en.lproj/Image_Localizable.strings
@@ -1,3 +1,12 @@
+
+
+
+
+
+
+
+
+
 /* 
   Image_Localizable.strings
   多语言
@@ -5,4 +14,4 @@
   Created by 唐蒙波 on 2019/4/23.
   Copyright © 2019年 tangmengbo. All rights reserved.
 */
-"舞台_报名" = "E_hc_btn_liwu";
+"舞台_报名" = "English_liwu";
