--- a/多语言/zh-Hans.lproj/Image_Localizable.strings
+++ b/多语言/zh-Hans.lproj/Image_Localizable.strings
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 /* 
   Image_Localizable.strings
   多语言
@@ -5,4 +12,4 @@
   Created by 唐蒙波 on 2019/4/23.
   Copyright © 2019年 tangmengbo. All rights reserved.
 */
-"舞台_报名" = "E_hc_btn_signup";
+"舞台_报名" = "Chiinese_signup";
